# pvr.sql

./: CMakeLists.txt  README.md
lib/netsockets/: CMakeLists.txt  socket.cc  socket.hh
pvr.sql/: addon.xml.in  changelog.txt
pvr.sql/resources/: settings.xml
pvr.sql/resources/language/resource.language.en_gb/: strings.po
src/: DVRClient.cpp  DVRClient.h  IPTVClient.cpp  IPTVClient.h  client.cpp  client.h
src/pvrsimple/: PVRRecorder.cpp  PVRRecorder.h  PVRTypes.h  SQLConnection.cpp  SQLConnection.h  Settings.cpp  Settings.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h
src/pvrsimple/data/: DVRRecording.cpp  DVRRecording.h  DVRTimer.cpp  DVRTimer.h  DVRTimerType.cpp  DVRTimerType.h  IPTVChannel.cpp  IPTVChannel.h  IPTVChannelGroup.cpp  IPTVChannelGroup.h  IPTVChannelGroupMember.cpp  IPTVChannelGroupMember.h  IPTVEpgChannel.cpp  IPTVEpgChannel.h  IPTVEpgEntry.cpp  IPTVEpgEntry.h  SQLRecord.cpp  SQLRecord.h
src/pvrsimple/utilities/: Callbacks.cpp  Callbacks.h  FileHelpers.cpp  FileHelpers.h  GZHelpers.cpp  GZHelpers.h  HTTPHelpers.cpp  HTTPHelpers.h  LOGHelpers.cpp  LOGHelpers.h  M3UHelpers.cpp  M3UHelpers.h  SQLHelpers.cpp  SQLHelpers.h  Subprocess.cpp  Subprocess.h  Utilities.cpp  Utilities.h  XMLHelpers.cpp  XMLHelpers.h
